Retry Displaying Image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Hello World</h1>
-<img src="./images/Lisa_And_James_Masks.jpeg" style="display: block; margin: auto;"/>
+<img src="https://brian-m-carlson.github.io/images/Lisa_And_James_Masks.jpeg" style="display: block; margin: auto;"/>
 <p>I'm hosted with Github Pages</p>
 
 </body>
